Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     });
 
             
-            const titles = ["webamor.xyz", "miguel & gabi", "LUV"];
+            const titles = ["EU TE AMO", "marii & after", "LOVE"];
             let titleIndex = 0;
 
             function changeTitle() {
@@ -533,3 +533,4 @@
 
 </body>
 </html>
+
