--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/imgs/icon.png">
     
     <!-- Título -->
-    <title>LUV</title>
+    <title>MARI & AFTER</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/3458439583409583094580/3458439583409583094580.css">
@@ -533,4 +533,5 @@
 
 </body>
 </html>
+
 
